--- a/distroprefs/01.DISABLED.yml
+++ b/distroprefs/01.DISABLED.yml
@@ -127,6 +127,7 @@ match:
     |GRICHTER/Apache-SessionX-2.01.tar.gz    # user input required
     |GRICHTER/DBIx-Recordset-\d              # hangs
     |GRICHTER/Embperl-2.5.0.tar.gz           # loops on apache src
+    |GRICHTER/HTML-Embperl-1.2.1.tar.gz      # loops on apache src
     |GRICHTER/HTML-Embperl-1.3.6.tar.gz      # loops on apache src
     |GRM/
     |GRODITI/POE-Component-DirWatch-\d       # the 03editedfile or so seems to take forever
