--- a/distroprefs/01.DISABLED.yml
+++ b/distroprefs/01.DISABLED.yml
@@ -38,7 +38,8 @@ match:
     |.*FamilyTreeInfo                        # https://github.com/mishin/Ftree-cpan/issues/2
     |.*/XSConfig-                            # rt.cpan.org #110631
     |.*/GOOGLE-ADWORDS-PERL-CLIENT-\d        # looks like abandoned in favor to Google-Ads-AdWords-Client
-    |AADLER/Inline-Octave-0.31.zip           # 
+    |AADLER/Inline-Octave-0.31.zip           #
+    |AJGB/AnyEvent-Tickit-0.01.tar.gz        # https://rt.cpan.org/Ticket/Display.html?id=104852
     |AMBS/Lingua/Lingua-PT-Speaker-0.10.tar.gz # does not use prompt() and no $|
     |ADAMK/Acme-Mom-Yours-\d                 # blocks the smoker for too long
     |ADAMK/CPAN-Index-0.01.tar.gz            # https://rt.cpan.org/Ticket/Display.html?id=43349
@@ -48,6 +49,7 @@ match:
     |AGENT/OpenResty-0                       # 0.3.8 hangs after 'cp etc/openresty.conf etc/site-openresty.conf'
     |AHERNIT/Dir-ListFilesRecursive-\d       # Deep recursion with high memory consumption
     |AHICOX/Config-Framework-2.5.tar.gz      # Where is your Virtual Root?
+    |AHICOX/Text-UPF-1.0.5.tar.gz            # asks questions
     |AJOLMA/Geo-Raster-\d                    # requires Raster Algebra Library, no debian package (?)
     |ALVAROL/PerlCryptLib-1                  # hangs when searching header files
     |AMALTSEV/XAO-                           # hangs
@@ -77,6 +79,7 @@ match:
     |BRONDSEM/Mail-SpamAssassin-Plugin-OpenPGP-1.0.4.tar.gz
     |BSCHMAL/parrot-0.6.0.tar.gz             # hangs during configure with 5.10
     |BSUGARS/IPC-Shareable-0.60.tar.gz       # hangs
+    |BSUGARS/nsapi_perl-0.24.tar.gz          # seems abandoned since 1998
     |BTROTT/WWW-Blog-Metadata-0.02           # ExtUtils::AutoInstall 0.56 http://rt.cpan.org/Ticket/Display.html?id=40601
     |CAIDAPERL/Chart-Graph-\d                # hangs Makefile.PL: RT 33541
     |CAPOEIRAB/WWW-Salesforce-               # demands username and passwd
@@ -98,6 +101,7 @@ match:
     |DDUMONT/Tk-Multi-1.006.tar.gz           # seems abanodoned since 2004
     |DESIMINER/Date-Business-1.2.tar.gz      # https://rt.cpan.org/Ticket/Display.html?id=94415
     |DIEDERICH/App-MultiModule-Tasks-SmartMerge-1.161240.tar.gz
+    |DJASMINE/Net-DLookup-1.01.tar.gz        # asks questions
     |DJBERG/Tk-LabPopEntry-0.05.tar.gz
     |DLUX/TableMap-1.0.tar.gz                # seems abandoned since 2000
     |DMAKI/Alien-MeCab                       # ditto
@@ -107,8 +111,10 @@ match:
     |.*/Google-Ads-AdWords-Client-[1-4]\.    # avoid non-latest version (5.7.0)
     |.*/Google-Ads-AdWords-Client-5\.[1-6]\. # avoid non-latest version (5.7.0)
     |DUFF/Module-Install-RPM-0.01            # see https://rt.cpan.org/Ticket/Display.html?id=67027
+    |DWC/DBIx-NamedDSN-0.11.tar.gz           # asks questions
     |EBRUNI/WWW-BBB-API-\d                   # asks questions
     |EBRUNI/HTML-DBTable-0.05.tar.gz         # user interaction required
+    |EBRUNI/HTML-Puzzle-0.13.tar.gz          # looks like abandoned since 2002
     |ECALDER/Proc-PID-File-1.24.tar.gz       # hangs during test.pl
     |ECALDER/POE-Component-Child-1.39        # hangs during test
     |EDALY/Text-GenderFromName-0.32.tar.gz   # bad prompt
@@ -122,6 +128,7 @@ match:
     |ERNESTO/Frost-0\.70\.
     |EVO/Term-ShellKit-1.002.tar.gz
     |EVO/Devel-PreProcessor-2003.1128.tar.gz # looks like abandoned since 2003
+    |EWILHELM/CAD-Drawing-IO-DWGI-0.12.tar.gz # looks like abandoned since 2006
     |EWILHELM/HTTP-Server-Simple-Er-v0.0.3.tar.gz # hangs on some perls
     |FIBO/PNI-Node-Tk-                       # hangs after t/PNI-Node-Tk.t
     |FCO/treadsemulate/threads-emulate-0     # hangs in 00-load.t on 32642
@@ -155,6 +162,7 @@ match:
     |HOLOWAY/Catalyst-Log-Log4perl-1.00.tar.gz # endless loop with deep recursion
     |HOOO/X3D-0                              # hangs at t/nodefield_sfdouble_06 on perl-5.10.0 at 33955
     |HOPCROFTS/Nagios-WebTransact-\d         # asks for a server and port
+    |HOPCROFTS/Nagios-WebTransact-Timed-\d   # asks for a server and port
     |IKRUGLOV/Sereal-Encoder-4\.\d+_\d+.tar.gz
     |.*/DbFramework-\d                       # asks questions but I have not time
     |IMACAT/arclog-3.\d                      # one test (01-exhaust) hangs with several perls
@@ -162,6 +170,7 @@ match:
     |INGY/Module-Install-TestML-0.02.tar.gz  # unsuited for testing: https://github.com/testml-lang/testml/wiki/TestML-and-CPAN
     |ISHIGAKI/PPM-Make-\d                    # asks questions
     |IVAN/Business-OnlinePayment-eSelectPlus-\d # hangs with 5.14.0-357
+    |IX/Apache-Wombat-0.5.1.tar.gz           # asks questions
     |JANL/Net-Server-0.99.6.1                # hangs
     |JANPAZ/Font-TFM-\d                      # asks for path to tfm files
     |JASONK/Data-Faker-0.07                  # t/Data-Faker-DateTime.t runs forever
@@ -182,6 +191,8 @@ match:
     |JMERELO/MP3-Podcast-\d                  # hangs in test
     |JMMILLS/App-Nopaste-Service-AnyPastebin-\d # hangs due Module::Install
     |JOENIO/WWW-Scraper-ISBN-Siciliano_Driver-0.02.tar.gz
+    |JONAS/CGI-Debug-1.0.tar.gz              # looks like abandoned since 2000
+    |JPIERCE/EZDBI-0.16.tgz                  # asks questions
     |JQUELIN/WWW-DaysOfWonder-Memoir44-\d    # hangs
     |JROCKWAY/AnyEvent-Retry-\d              # hangs after release-pod-syntax.t
     |JSTOWE/Term-Screen-\d                   # automated testing impossible
@@ -232,6 +243,7 @@ match:
     |MAXM/MMM-OracleDump-0.01.tar.gz         # user interaction required
     |MCMAHON/WWW-Mechanize-Pluggable-1.03.tar.gz # killed the cpan shell with kill(); I don't understand how
     |METZZO/TiVo-HME-1.3\.tar.gz             # seems abandoned since 2005
+    |MFERRIS/Class-DBI-DB2-0.16.tar.gz       # asks questions
     |MJGARDNER/Dist-Zilla-Plugin-RequiresExternal-\d # endless loop if JSON::PP missing???
     |MIKEM/Authen-TacacsPlus/Authen-TacacsPlus-0.17 # seems to hang
     |MIKER/Mail-SpamCannibal-0.97.tar.gz     # IIUC it insists on answering aquestion with yes or no
@@ -304,6 +316,7 @@ match:
     |SCOTT/Attribute-Persistent-1.1.tar.gz   # fails with out of memory and blocks the box for quite a while
     |SDPRICE/Linux-DVB-DVBT-Apps-QuartzPVR-\d
     |SEGAN/POE-Component-LaDBI-1.2.1
+    |SHERZODR/MySQL-TableInfo-1.01.tar.gz    # seems like abandoned since 2001
     |SHLOMIF/XML-Grammar-Screenplay-\d       # t/to-xhtml.t took ~17 minutes
     |SCHOP/htpl-3.14.tar.gz                  # hangs since Feb 28, 2002
     |SIRROBERT/Set-Toolkit-0.11.tar.gz       # https://rt.cpan.org/Public/Bug/Display.html?id=67343
@@ -311,7 +324,7 @@ match:
     |SMUELLER/Alien-ROOT-v5.28.0.1           # hangs
     |SOMMERB/Myco-1.22.tar.gz                # seems like abandoned since 2006
     |SPANG/App-SD-0.75.tar.gz                # hangs in test t/sd-github/basic.t
-    |ZMAN/SPOPSx-Ginsu-0.58.tar.gz
+    |SPRAGST/Sybase-Xfer-0.63.tar.gz         # asks questions
     |SPURKIS/Agent-3.20.tar.gz               # https://rt.cpan.org/Ticket/Display.html?id=94430
     |SRI/Catalyst-Plugin-HTML-Widget-1.1.tar.gz # Module::Install 0.54 http://rt.cpan.org/Ticket/Display.html?id=40618
     |SRVANCE/P4-Server-\d                    # or maybe it was this one?
@@ -328,6 +341,8 @@ match:
     |SWALTERS/Acme-RPC-\d                    # hangs
     |TBR/Net-RabbitMQ-Simple-0.0004          # hangs
     |THEDEVIL/Debarnacle-2002.05.15.tar.gz   # looks like abandoned since 2002
+    |TIEDEMANN/uplug-treetagger-0.3.2.tar.gz # asks questions
+    |TJENNESS/Chart-GRACE-0.95.tar.gz        # seems abandoned since 2001
     |TJENNESS/Chart-XMGR-0.95.tar.gz
     |TOBYINK/App-perlrdf-0.006.tar.gz        # https://rt.cpan.org/Ticket/Display.html?id=99158
     |TOKUHIROM/Amon2-                        # test hangs with some perls
@@ -358,6 +373,7 @@ match:
     |XAICRON/Module-Install-ExtendsMakeTest  # hangs (0.0{2,3})
     |XAICRON/Module-Install-TestTarget-      # hangs
     |XANTUS/MojoX-AIO-0.02.tar.gz            # hangs
+    |XAOINC/XAO-FS-1.0                       # avoid older version
     |XERN/Bio-MedChunker-0.02.tar.gz
     |XERN/CGI-QuickApp-\d                    # hangs immediately
     |XERXES/Microsoft-AdCenter-[1-7]\.\d+\.tar.gz # avoid non-latest version (8.11)
@@ -374,6 +390,8 @@ match:
     |ZENIN/Tk-MenuHash-1.12.tar.gz
     |ZIEFLE/WWW-LEO-0.01.tar.gz              # rt 34540
     |ZINIGOR/libeve-perl_0.05.orig.tar.gz    # hangs
+    |ZMAN/SPOPSx-Ginsu-0.58.tar.gz
+    |ZMIJ/Cache/Memcached/Cache-Memcached-Semaphore-0.3.tar.gz # looks like abandoned since 2006
     |ZOFFIX/POE-Component-WWW-Google-PageRank-\d # hangs in 00-load with 34437
     |ZOFFIX/POE-Component-WebService-HtmlKitCom-FavIconFromImage-\d # hangs
     |ZSTEVENS/Alien-ActiveMQ-\d              # downloads 50MB and leaves them in /tmp/
