--- a/distroprefs/MI.yml
+++ b/distroprefs/MI.yml
@@ -39,6 +39,7 @@ match:
     |ASKSH/sys-\d
     |AUDREYT/Scalar-Defer-\d
     |AUTRIJUS/ExtUtils-AutoInstall-0.63.tar.gz
+    |AUTRIJUS/Parse-SVNDiff-\d
     |AVAR/Bot-BB2-\d
     |AVAR/SMS-Send-IS-Vodafone-\d
     |AVIF/Image-Compare-\d
@@ -57,6 +58,7 @@ match:
     |BLBLACK/MooseX-LazyLogDispatch-\d
     |BLBLACK/MooseX-SimpleConfig-\d
     |BLBLACK/Term-Spinner-\d
+    |BLM/App-GUI-Notepad-\d
     |BLUET/MojoX-Session-Store-Redis-\d
     |BOBMATH/Crypt-CAST5_PP-\d
     |BOBTFISH/Catalyst-Action-REST-\d
@@ -86,6 +88,7 @@ match:
     |BRICAS/WWW-OpenSearch-\d
     |BRICAS/WWW-Wikipedia-\d
     |BTROTT/Authen-TypeKey-\d
+    |BTROTT/Catalyst-Plugin-AtomServer-\d
     |BTROTT/Data-ObjectDriver-\d
     |BTROTT/Feed-Find-
     |BTROTT/URI-Fetch-\d
@@ -113,7 +116,7 @@ match:
     |CLKAO/PerlIO-via-dynamic-\d
     |CLKAO/Pushmi-v\d
     |CLKAO/RunApp-\d
-    |CLKAO/SVK-v\d
+    |CLKAO/SVK-v?\d
     |CTBROWN/MooseX-Meta-Attribute-Lvalue-\d
     |CWEST/JSAN-\d
     |DAMOG/Dancer-Template-Haml-\d
@@ -168,6 +171,9 @@ match:
     |GAAL/Perl6-Take-\d
     |GAAL/Task-Smoke-\d
     |GBARR/Authen-SASL-\d
+    |GEOTIGER/Net-SFTP-Recursive-\d
+    |GEOTIGER/Oracle-Trigger-\d
+    |GHENRY/Catalyst-Plugin-Email-Page-\d
     |GHENRY/Samba-LDAP-\d
     |GPHAT/Chart-Clicker-\d
     |GPHAT/Geometry-Primitive-\d
@@ -185,6 +191,7 @@ match:
     |GUGOD/Template-Provider-Markdown-\d
     |GUGOD/Test-Continuous-\d
     |GUGU/Algorithm-FloodControl-\d
+    |HACHI/POE-Component-Client-LDAP-\d
     |HANENKAMP/Bot-Net-\d
     |HANENKAMP/Data-Remember-\d
     |HANENKAMP/HTML-ParagraphSplit-\d
@@ -298,10 +305,12 @@ match:
     |MSTROUT/Devel-REPL-\d
     |MSTROUT/Reaction-\d
     |MSTROUT/Task-Catalyst-Tutorial-\d
+    |NACHBAUR/Apache-AxKit-Provider-File-Syntax-\d
     |NEKOKAK/DBIx-Class-Stash-\d
     |NEKOKAK/DBIx-Class-TableNames-\d
     |NEKOKAK/Geography-JapanesePrefectures-Walker-\d
     |NEMUX/Net-UCP-\d
+    |NEMUX/Net-UCP-Common-\d
     |NUFFIN/Catalyst-Plugin-Session-State-Cookie-\d
     |NUFFIN/MooseX-Getopt-\d
     |NUFFIN/MooseX-Storage-\d
@@ -349,13 +358,14 @@ match:
     |RSRCHBOY/Archive-RPM-\d
     |RSRCHBOY/CPANPLUS-Dist-RPM-\d
     |RSRCHBOY/Fedora-Bugzilla-\d
+    |RST/FrameMaker-MifTree
     |SARTAK/Acme-Aspartame-\d
     |SARTAK/App-Nopaste-\d
     |SARTAK/Carp-REPL-\d
     |SARTAK/Date-Extract-\d
     |SARTAK/IO-Socket-Telnet-\d
     |SARTAK/IncPatch-\d
-    |SARTAK/Jifty-DBI-\d
+    |/Jifty-DBI-\d
     |SARTAK/Jifty-Plugin-OAuth-\d
     |SARTAK/Moose-\d
     |SARTAK/Net-Hiveminder-\d
@@ -366,9 +376,11 @@ match:
     |SHIBUYA/Debug-Smart-\d
     |SMUELLER/Math-Approx-Symbolic-
     |SMUELLER/PAR-
+    |SMUELLER/Task-Math-Symbolic-\d
     |SPANG/App-SD-\d
     |SPANG/Prophet-\d
-    |SRI/Catalyst-Plugin-HTML-Widget-\d
+    |SPLICE/Lingua-EN-Segmenter-\d
+    |.*/Catalyst-Plugin-HTML-Widget-\d # was SRI
     |SRI/HTML-Declare-\d
     |STEVAN/FCGI-Engine-\d
     |STEVAN/Moose-\d
@@ -387,8 +399,12 @@ match:
     |TOMYHERO/Catalyst-Model-DynamicAdaptor-\d
     |TOMYHERO/Catalyst-Plugin-Config-Multi-\d
     |TOMYHERO/Catalyst-Plugin-ConfigLoader-Multi-\d
+    |TPG/Net-Radius-PacketOrdered-\d
+    |TPG/Luka-\d
     |TRAVAIL/DBIx-Class-Schema-Slave-\d
     |VICTORI/perlbal-plugin-backendheaders-\d
+    |XERN/Lingua-LinkParser-FindPath-\d
+    |YANNK/Catalyst-Plugin-MortalForward-\d
     |YAPPO/Class-Component-\d
     |YAPPO/HTTP-Engine-\d
     |YAPPO/Lingua-JA-Summarize-Extract-\d
@@ -397,6 +413,9 @@ match:
     |YVESAGO/Net-Sieve-\d
     |ZAKAME/Tie-Amazon-S3-\d
     |ZARQUON/Catalyst-Helper-AuthDBIC-\d
+    |ZEV/Test-Chimps-\d
+    |ZEV/Test-Chimps-Anna-\d
+    |ZEV/Test-Chimps-Client-\d
     |ZIGOROU/Catalyst-Helper-Model-MozRepl-\d
     |ZIGOROU/Catalyst-Model-MozRepl-\d
     |ZIGOROU/Data-ClearSilver-HDF-\d
